--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 remote_theme : sujaykundu777 /devlopr-jekyll
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl:
+url: "https://github.com/mtm776/mtm776.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
+baseurl:""
 
 urls:
     - text: About Me
